fixed nav toggle collapse container, updater new font

--- a/src/styles/_user-variables.scss
+++ b/src/styles/_user-variables.scss
@@ -8,15 +8,17 @@
 //|   Fonts Families
 //-----------------------------------------------*/
 
-$native-font-stack: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto',
-  'Helvetica Neue', Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji',
-  'Segoe UI Symbol' !default;
-$font-family-sans-serif: 'PT Sans', $native-font-stack;
-$font-family-sans-serif-narrow: 'PT Sans Narrow', $native-font-stack;
+$native-font-stack-sans-serif: -apple-system, BlinkMacSystemFont, 'Segoe UI',
+  'Roboto', 'Helvetica Neue', Arial, sans-serif, 'Apple Color Emoji',
+  'Segoe UI Emoji', 'Segoe UI Symbol' !default;
+$native-font-stack-serif: Times, 'Times New Roman', Georgia, serif !default;
+
+$font-family-sans-serif: 'Lato', $native-font-stack-sans-serif;
+$font-family-serif: 'Arvo', $native-font-stack-serif;
 $font-family-base: $font-family-sans-serif !default;
 
 //*-----------------------------------------------
 //|   Fonts
 //-----------------------------------------------*/
 
-$headings-font-family: $font-family-sans-serif-narrow !default;
+$headings-font-family: $font-family-serif !default;
